# nepal-weather-pipeline

./: Dockerfile.api  Dockerfile.dashboard  README.md  alembic.ini  docker-compose.yml  fetcher.py  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: c54ce42fbc68_create_weather_tables.py  dd683d05c4f6_create_weather_tables.py
api/: database.py  fetcher.py  main.py  models.py  schemas.py
api/routers/: weather.py
charts/: plots.py
dashboard/: app.py
processing/: analysis.py
tests/: conftest.py  test_analysis.py  test_api.py
