[project]
name = "nepal-weather-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "plotly>=6.7.0",
    "polars>=1.41.1",
    "pydantic-settings>=2.14.1",
    "python-decouple>=3.8",
    "requests>=2.34.2",
    "sqlalchemy[asyncio]>=2.0.50",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
